--- a/helm/doc-cluster-and-dedup-random-forest/templates/ingress.yaml
+++ b/helm/doc-cluster-and-dedup-random-forest/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
   {{- $fullName := include "app-server.fullname" . -}}
-  {{- $svcPort := .Values.service.port -}}
+  {{- $svcPort := .Values.service.httpport -}}
   {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
   {{- else -}}
@@ -34,9 +34,12 @@ spec:
       paths:
         {{- range .paths }}
       - path: {{ . }}
+        pathType: Prefix
         backend:
-          serviceName: {{ $fullName }}
-          servicePort: {{ $svcPort }}
+          service:
+            name: {{ $fullName }}
+            port:
+              number: {{ $svcPort }}
   {{- end }}
   {{- end }}
   {{- end }}
