--- a/helm/doc-cluster-and-dedup-random-forest/values_prod.yaml
+++ b/helm/doc-cluster-and-dedup-random-forest/values_prod.yaml
@@ -1,9 +1,7 @@
 server:
   autoscale:
-    enabled: true
-    minReplicas: 3
-    maxReplicas: 4
-    targetCPUUtilizationPercentage: 100
+    enabled: false
+    replicaCount: 3
   args:
   - prod
 
